# actix-sample-project

./: .env  Cargo.toml  sample.env
src/: main.rs
src/address/: controller.rs  mod.rs  service.rs
src/address_balance/: controller.rs  mod.rs  service.rs
src/address_tx/: mod.rs  service.rs
src/db/: mod.rs  service.rs
src/utils/: common.rs  mod.rs  request.rs
